--- a/index.html
+++ b/index.html
@@ -502,9 +502,9 @@
   <!-- Links -->
   <h6 class="text-uppercase fw-bold">Contact</h6>
   <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 75px; background-color: #7c4dff; height: 2px" />
-  <p><i class="fas fa-home mr-3"></i> Crocodile lane Festus residence Ga west Pokuase, Ghana</p>
+  <p><i class="fas fa-home mr-3"></i> Ambohimiandra, Antananarivo Madagascar</p>
   <p><i class="fas fa-envelope mr-3"></i> info@avt.com</p>
-  <p><i class="fas fa-phone mr-3"></i> +233 (0) 54 74 504 64 </p>
+  <p><i class="fas fa-phone mr-3"></i> +233 (0) 34 25 469 62</p>
   <p><i class="fas fa-print mr-3"></i> +261 (0) 34 86 779 61</p>
 </div>
 <!-- Grid column -->
